--- a/main.css
+++ b/main.css
@@ -62,6 +62,29 @@ h2{
     border-radius: 0.6em;
 }
 
-#music{
-    width: 100%;
+footer{
+    background-color: lightblue;
+    height: 25px;
+    font-size: 1.2em;
+    color: slateblue;
+    text-align: center;
+    padding: 1.5em 2.0em;
+
+}
+div.clear{
+    clear: both;
+    font-size: 1%;
+}
+
+footer ul{
+    display: inline-block;
+    list-style: none;
+    margin: 0 0 0 0.6em;
+    padding: 0;
+}
+
+footer ul li{
+    display: inline-block;
+    padding: 0 0.7em 0 0;
+    margin: 0;
 }
